# Bismuth

./: .gitignore  .gitmodules  BUGS.md  CMakeLists.txt  README.md  TODO.md  about.md  changelog.md  codegenProfilerHooks.js  config.bat  mod.json  profilerHooks.cpp  support.md
.github/workflows/: multi-platform.yml
resources/: spriteMeshes.json
resources/shaders/: basic.frag  basic.vert  differenceMode.frag  differenceMode.vert  fullscreen.vert  object.frag  object.vert  overdrawView.frag  shaderSprites.glsl  shared.h
src/: common.cpp  common.hpp  main.cpp  profiler.cpp  profiler.hpp
src/decomp/: GJBaseGameLayer.cpp  GJBaseGameLayer.hpp  PlayLayer.cpp  PlayLayer.hpp
src/math/: ConvexList.cpp  ConvexList.hpp  ConvexPolygon.cpp  ConvexPolygon.hpp  Line.cpp  Line.hpp
src/renderer/: Buffer.cpp  Buffer.hpp  DifferenceMode.cpp  DifferenceMode.hpp  GroupManager.cpp  GroupManager.hpp  ObjectBatch.cpp  ObjectBatch.hpp  ObjectBatchNode.cpp  ObjectBatchNode.hpp  ObjectSorter.cpp  ObjectSorter.hpp  ObjectSpriteUnpacker.cpp  ObjectSpriteUnpacker.hpp  OverdrawView.cpp  OverdrawView.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderSpriteManager.cpp  ShaderSpriteManager.hpp  SpriteMeshDictionary.cpp  SpriteMeshDictionary.hpp  hooks.cpp
